--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,25 @@
-<div>这是我主页</div>
-<hr>
-<app-server> 我是一个倒入的 component</app-server>
+<!-- <div class="container">
+  <nav>
+    <ul>
+      <li><a>Home</a></li>
+      <li><a>Taco</a></li>
+      <li><a>Draft List</a></li>
+      <li><a>Hours</a></li>
+      <li><a>Directions</a></li>
+      <li><a>Contact</a></li>
+    </ul>
+  </nav>
+  <section>
+    section的margin-left
+  </section>
+  <section>
+    Lorem ipsum
+  </section>
+  <section>
+    注意观察你调整
+  </section>
+</div>
+<footer>
+  <p>我是footer</p>
+</footer> -->
+<app-server></app-server>
