--- a/src/app/server/server.component.html
+++ b/src/app/server/server.component.html
@@ -1,2 +1,18 @@
-<div> I'm the server-Component!</div>
-<div>我会被再入的</div>
+<nav>
+  <ul>
+    <li><a>Home</a></li>
+    <li><a>Taco</a></li>
+    <li><a>Draft List</a></li>
+    <li><a>Hours</a></li>
+    <li><a>Directions</a></li>
+    <li><a>Contact</a></li>
+  </ul>
+</nav>
+<div class="column">
+  <section>
+    Tada!
+  </section>
+  <section>
+    Lorem ipsum
+  </section>
+</div>
